# ProjetCO-BlindTest

./: README.md
BlindTestScoreManager/: CMakeLists.txt
BlindTestScoreManager/include/: InputDevice.hpp  Score.hpp  ScoreManager.hpp  Team.hpp  outputDevice.hpp
BlindTestScoreManager/src/: InputDevice.cpp  ManagerApp.cpp  Score.cpp  ScoreManager.cpp  outputDevice.cpp  testApp.cpp
ProjetCO_IN/: CMakeLists.txt  Frame.cpp  Frame.hpp  TeamsData.cpp  TeamsData.hpp  Window.cpp  Window.h  main.cpp
ProjetCO_OUT/: CMakeLists.txt  EndFrame.cpp  EndFrame.hpp  FrameGrid.cpp  FrameGrid.hpp  InputDeviceUDP.cpp  InputDeviceUDP.hpp  KeyboardWatcher.cpp  KeyboardWatcher.hpp  Window.cpp  Window.h  main.cpp
